# guarded-lh

./: .gitignore  TODO.md  guarded.cabal  stack.yaml
src/: Bird.hs  Colist.hs  Conat.hs  Hofmann.hs  Later.hs  Part.hs  Stream.hs
src/Colist/: Num.hs  Partial.hs
src/Conat/: Partial.hs
