Cabal-Version:       2.4
Name:                guarded
Version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md


library
  exposed-modules:
      Later
    , Conat
    , Colist
    , Hofmann

  hs-source-dirs: src
  build-depends:
       base
     , liquidhaskell
     , liquid-prelude
     , rest-rewrite
     , unordered-containers
     , hashable
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell
